# COSMO-32

./: .gitignore  CLAUDE.md  README.md  TASK.md  TASK_BASIC.md
emu/: CMakeLists.txt
emu/src/: bus.hpp  cpu.cpp  cpu.hpp  decode.hpp  main.cpp
emu/src/device/: display.hpp  dma.hpp  eth.hpp  fsmc.hpp  hostclock.hpp  i2s.hpp  memory.hpp  pfic.hpp  timer.hpp  usart.hpp
fs/: boot.cfg
fs/apps/: FEATURES.txt  arrtest.bas  calc.bas  count.bas  datatest.bas  draw.bas  fib.bas  guess.bas  hanoi.bas  hello.bas  life.bas  mandel.bas  nibbles.bas  nottest.bas  ontest.bas  smiley.bas  sort.bas  star.bas  strtest.bas  test_and.bas  test_and_pr.bas  test_complex.bas  test_debug.bas  test_do.bas  test_for.bas  test_if.bas  test_if2.bas  test_if_for.bas  test_let_or.bas  test_line.bas  test_misc.bas  test_nested.bas  test_nested_if.bas  test_no_or.bas  test_no_sub.bas  test_num.bas  test_num2.bas  test_or.bas  test_or2.bas  test_or_direct.bas  (+17 more)
fs/data/: haiku.txt  notes.txt  readme.txt  rw_test.txt  scores.txt
os/: Makefile  link.ld
os/src/: basic.c  bench.c  boot.S  config.h  const.h  display.c  font8x8.h  main.S  net.S  shell.S
tests/custom/: Makefile  atomic.s  basic.s  branch.s  compressed.s  dhcp.s  display.s  dma.s  eth.s  fsmc.s  i2s.s  icmp.s  interrupt.s  mul.s  shell_debug.s  simple_usart.s  test.ld  tftp.s  tftp_read.s  tftp_rw.s  tftp_write.s  timer.s  usart.s  wfi.s
